@@ -4,42 +4,44 @@ import com.example.restaurant.dto.RestaurantRequestDTO;
 import com.example.restaurant.dto.RestaurantResponseDTO;
 import com.example.restaurant.mapper.RestaurantMapper;
 import com.example.restaurant.model.CuisineType;
-import jakarta.transaction.Transactional;
-import org.springframework.stereotype.Service;
 import com.example.restaurant.model.Restaurant;
 import com.example.restaurant.repository.RestaurantRepository;
-
-import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
+@Transactional
 public class RestaurantService {
 
     private final RestaurantRepository restaurantRepository;
     private final RestaurantMapper restaurantMapper;
 
-    @Transactional
-    public RestaurantResponseDTO save(RestaurantRequestDTO dto) {
-        Restaurant restaurant = restaurantMapper.toEntity(dto);
-        return restaurantMapper.toResponseDTO(restaurantRepository.save(restaurant));
+    @Autowired
+    public RestaurantService(RestaurantRepository restaurantRepository, RestaurantMapper restaurantMapper) {
+        this.restaurantRepository = restaurantRepository;
+        this.restaurantMapper = restaurantMapper;
     }
 
     public List<RestaurantResponseDTO> findAll() {
         return restaurantRepository.findAll().stream()
                 .map(restaurantMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public RestaurantResponseDTO findById(Long id) {
-        return restaurantRepository.findById(id)
-                .map(restaurantMapper::toResponseDTO)
-                .orElseThrow(() -> new RuntimeException("Ресторан не найден"));
+        return restaurantMapper.toResponseDTO(
+                restaurantRepository.findById(id)
+                        .orElseThrow(() -> new RuntimeException("Ресторан не найден")));
     }
 
-    @Transactional
+    public RestaurantResponseDTO save(RestaurantRequestDTO dto) {
+        return restaurantMapper.toResponseDTO(
+                restaurantRepository.save(restaurantMapper.toEntity(dto)));
+    }
+
     public RestaurantResponseDTO update(Long id, RestaurantRequestDTO dto) {
         Restaurant existing = restaurantRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Ресторан не найден"));
